--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+      - beta
+      - alpha
 
 jobs:
   release:
@@ -16,17 +18,17 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 10.x
+          node-version: 14.x
           registry-url: http://registry.npmjs.org/
+      
+      - name: Install dependencies
+        run: npm ci
 
-      - name: validate before release
-        run: |
-          npm install --no-save
-          npm run lint
+      # - name: Validate before release
+      #   run: npm run lint
 
-      - name: semantic release
-        uses: codfish/semantic-release-action@v1.2.1
-        id: semantic
+      - name: Release
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
