--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zokrates--testomat.js",
+  "name": "zokrates--temp.js",
   "description": "This is a Node.js wrapper around ZoKrates.",
   "license": "PUBLIC DOMAIN",
   "version": "1.3.0-alpha.3",
