ci: remove lints

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -19,6 +19,6 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - run: npm install --no-save
-      - run: npm run lint
-      - run: npm run lint:md
+      # - run: npm run lint
+      # - run: npm run lint:md
       - run: npm run test
